Fixed: Border no longer crosses active tab in TabPane Fixed: Pulsing buttonfocus now starting/stopping correctly. Fixed: Textalignment in RadioButton now proper. Improved performance at RadioButton (removed loop).

--- a/src/main/resources/com/aerofx_project/win7.css
+++ b/src/main/resources/com/aerofx_project/win7.css
@@ -235,15 +235,16 @@
 
 .tab-pane:top > .tab-content-area {
     -fx-background-color: rgb(255,255,255);
-    -fx-border-color: rgb(137,140,149);
+    -fx-border-color: transparent rgb(137,140,149) rgb(137,140,149) rgb(137,140,149);
 }
 
-.tab-pane > *.tab-header-area {
+.tab-pane > *.tab-header-area > .headers-region {
     -fx-translate-x: -5px;
 }
 
 .tab-pane > *.tab-header-area > *.tab-header-background{
     -fx-background-color: rgb(240,240,240);
+    -fx-border-color: transparent transparent rgb(137,140,149) transparent ;
 }
 
 .tab-pane > .tab-header-area > .headers-region > .tab{
@@ -256,7 +257,7 @@
 
 .tab-pane > .tab-header-area > .headers-region > .tab:top{
     -fx-border-color: rgb(244,0,0), rgb(137,140,149), rgb(137,140,149), rgb(137,140,149);
-    -fx-border-width: 1 1 0 1;
+    -fx-border-width: 1 1 1 1;
     -fx-pref-height: 1.7em;
 }
 
@@ -270,6 +271,7 @@
 
 .tab-pane > .tab-header-area > .headers-region > .tab:selected{
     -fx-border-color: rgb(137,140,149);
+    -fx-border-width: 1 1 0 1;
     -fx-background-color: rgb(255,255,255);
     -fx-pref-height: 1.9em;
 }
